# rvc-cli

./: .gitignore  README.md  pyproject.toml
configuration/: .env  config.yml
src/rvc_cli/: __main__.py
src/rvc_cli/api/: alternative_train.py  create_dataset.py  download_models.py  inference.py  rec.py
src/rvc_cli/configs/: config.json  config.py
src/rvc_cli/infer/lib/: rmvpe.py  slicer2.py
src/rvc_cli/infer/lib/infer_pack/: attentions.py  models.py  models_onnx.py  modules.py
src/rvc_cli/infer/lib/infer_pack/modules/F0Predictor/: DioF0Predictor.py  HarvestF0Predictor.py  PMF0Predictor.py
src/rvc_cli/infer/lib/jit/: get_rmvpe.py  get_synthesizer.py
src/rvc_cli/infer/lib/train/: data_utils.py  process_ckpt.py  utils.py
src/rvc_cli/infer/lib/uvr5_pack/lib_v5/: spec_utils.py
src/rvc_cli/infer/modules/onnx/: export.py
src/rvc_cli/infer/modules/train/: extract_feature_print.py  preprocess.py  train.py
src/rvc_cli/infer/modules/train/extract/: extract_f0_print.py  extract_f0_rmvpe.py  extract_f0_rmvpe_dml.py
src/rvc_cli/infer/modules/uvr5/: modules.py  vr.py
src/rvc_cli/infer/modules/vc/: modules.py  pipeline.py  utils.py
